manifests/deploy-microservice.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: spare-drain-microservice
        stack: frontend
        source: demo
    name: spare-drain-microservice
    namespace: microservices
spec:
    replicas: 3
    selector:
        matchLabels:
            run: spare-drain-microservice
    template:
        metadata:
            labels:
                app: spare-drain-microservice
                run: spare-drain-microservice
                source: demo
        spec:
            containers:
                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/spare-drain-microservice
                    name: spare-drain-microservice
                    ports:
                        -   name: web
                            containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
    labels:
        app: spare-drain-microservice-service
        stack: frontend
    name: spare-drain-microservice-service
    namespace: microservices
spec:
    selector:
        source: demo
        app: spare-drain-microservice
    ports:
        -   name: web
            protocol: TCP
            port: 30201
            targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: spare-drain-ingress-canary
    namespace: microservices
spec:
    rules:
        -   http:
                paths:
                    -   path: /spare-drain/canary(/|$)(.*)
                        pathType: Prefix
                        backend:
                            service:
                                name: spare-drain-microservice-service-canary
                                port:
                                    number: 30201
